scrollbar fix

--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+html { margin-left: calc(100vw - 100%); } 
 h1{
   text-align: center;
   font-size: 48px;
